# ChangeLog for dev-libs/tdb
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/tdb/Attic/ChangeLog,v 1.10 2004/01/09 16:58:12 agriffis Exp $

  09 Jan 2004; Aron Griffis <agriffis@gentoo.org> tdb-1.0.6.ebuild:
  stable on alpha

  23 Nov 2003; Heinrich Wendel <lanius@gentoo.org> tdb-1.0.6.ebuild:
  added gdbm dep, bug #34166

  04 Oct 2003; Aron Griffis <agriffis@gentoo.org> tdb-1.0.6.ebuild:
  Use gnuconfig_update on alpha

  04 Oct 2003; Aron Griffis <agriffis@gentoo.org> tdb-1.0.6.ebuild:
  Add ~alpha

  02 Oct 2003; Aron Griffis <agriffis@gentoo.org> tdb-1.0.6.ebuild,
  files/tdb-1.0.6-gcc3.patch:
  Patch to fixup multiline strings

  13 Jul 2003; Michael Sterrett <msterret@gentoo.org> tdb-1.0.6.ebuild:
  fix issue with man pages installing in /usr/man (bug 19809); tidy

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*tdb-1.0.6 (7 Apr 2002)

  7 Apr 2002; Jon Nelson <jnelson@gentoo.org> ChangeLog, tdb-1.0.6.ebuild

  New ebuild for TDB (Trivial Database) v1.0.6