@@ -1,14 +1,14 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/tdb/Attic/tdb-1.0.6.ebuild,v 1.15 2004/01/09 16:58:12 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/tdb/Attic/tdb-1.0.6.ebuild,v 1.16 2004/04/18 16:26:01 aliz Exp $
 
-inherit gnuconfig
+inherit gnuconfig eutils
 
 DESCRIPTION="A Trivial Database"
 SRC_URI="mirror://sourceforge/tdb/${P}.tar.gz"
 HOMEPAGE="http://sourceforge.net/projects/tdb"
 
-KEYWORDS="x86 sparc alpha ppc"
+KEYWORDS="x86 sparc alpha ppc ~amd64"
 LICENSE="GPL-2"
 SLOT="0"
 IUSE=""
@@ -21,9 +21,7 @@ src_unpack() {
 	cd ${S}
 	epatch ${FILESDIR}/tdb-1.0.6-gcc3.patch || die
 
-	if use alpha; then
-		gnuconfig_update || die "gnuconfig_update failed"
-	fi
+	gnuconfig_update
 }
 
 src_install() {
