@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/tdb
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/tdb/Attic/ChangeLog,v 1.10 2004/01/09 16:58:12 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/tdb/Attic/ChangeLog,v 1.11 2004/04/18 16:26:01 aliz Exp $
+
+  18 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> tdb-1.0.6.ebuild:
+  Run gnuconfig_update for all archs, add amd64 keyword, inherit eutils, closing
+  #48180.
 
   09 Jan 2004; Aron Griffis <agriffis@gentoo.org> tdb-1.0.6.ebuild:
   stable on alpha
